// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blog no tags 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AllTags
    pageContext={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`blog two tags 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AllTags
    pageContext={
      Object {
        "tags": Array [
          "tag1",
          "tag2",
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ul>
        <li>
          <GatsbyLink
            to="/tags/tag1"
          >
            tag1
          </GatsbyLink>
        </li>
        <li>
          <GatsbyLink
            to="/tags/tag2"
          >
            tag2
          </GatsbyLink>
        </li>
      </ul>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li>
            <GatsbyLink
              to="/tags/tag1"
            >
              tag1
            </GatsbyLink>
          </li>,
          <li>
            <GatsbyLink
              to="/tags/tag2"
            >
              tag2
            </GatsbyLink>
          </li>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "tag1",
          "nodeType": "host",
          "props": Object {
            "children": <GatsbyLink
              to="/tags/tag1"
            >
              tag1
            </GatsbyLink>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "tag1",
              "to": "/tags/tag1",
            },
            "ref": null,
            "rendered": "tag1",
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "tag2",
          "nodeType": "host",
          "props": Object {
            "children": <GatsbyLink
              to="/tags/tag2"
            >
              tag2
            </GatsbyLink>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "tag2",
              "to": "/tags/tag2",
            },
            "ref": null,
            "rendered": "tag2",
            "type": [Function],
          },
          "type": "li",
        },
      ],
      "type": "ul",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ul>
          <li>
            <GatsbyLink
              to="/tags/tag1"
            >
              tag1
            </GatsbyLink>
          </li>
          <li>
            <GatsbyLink
              to="/tags/tag2"
            >
              tag2
            </GatsbyLink>
          </li>
        </ul>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <GatsbyLink
                to="/tags/tag1"
              >
                tag1
              </GatsbyLink>
            </li>,
            <li>
              <GatsbyLink
                to="/tags/tag2"
              >
                tag2
              </GatsbyLink>
            </li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "tag1",
            "nodeType": "host",
            "props": Object {
              "children": <GatsbyLink
                to="/tags/tag1"
              >
                tag1
              </GatsbyLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "tag1",
                "to": "/tags/tag1",
              },
              "ref": null,
              "rendered": "tag1",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "tag2",
            "nodeType": "host",
            "props": Object {
              "children": <GatsbyLink
                to="/tags/tag2"
              >
                tag2
              </GatsbyLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "tag2",
                "to": "/tags/tag2",
              },
              "ref": null,
              "rendered": "tag2",
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
